# psk

./: README.md  psk  pyproject.toml
docs/: process-name-display-rules.md
src/cli/: __init__.py  main.py
src/common/: exceptions.py  process_utils.py  questionary_utils.py
src/process_killer/: __init__.py  collector.py  display.py  filter.py  killer.py  main.py  models.py  prompt_utils.py  sorter.py
