[project]
name = "psk"
version = "1.0.0"
description = "A process management tool with clean CLI interface"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.19.2",
    "rich>=14.2.0",
    "questionary>=2.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
psk = "src.cli.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
